# Smart_IOT

./: .gitignore  CLAUDE.md  README.md  start-dev.sh  task.md
backend/: CLAUDE.md  POETRY_MIGRATION.md  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  serverless.yml
backend/src/domain/entities/: __init__.py  alert.py  alert_rule.py  deployment.py  device.py  firmware.py  user.py
backend/src/domain/ports/repositories/: __init__.py  i_alert_repository.py  i_device_repository.py  i_firmware_repository.py  i_timeseries_repository.py  i_user_repository.py
backend/src/functions/alert/: __init__.py  list_alerts.py
backend/src/functions/device/: __init__.py  get_device.py  list_devices.py  register_device.py
backend/src/functions/stream_processing/: __init__.py  alert_evaluator.py  kinesis_consumer.py  notification_dispatcher.py
backend/src/functions/websocket/: __init__.py  connect.py  disconnect.py  subscribe.py
backend/src/infrastructure/: __init__.py
backend/src/shared/config/: __init__.py  settings.py
backend/src/shared/exceptions/: __init__.py  base.py
backend/src/shared/middleware/: __init__.py  logger.py
backend/src/shared/utils/: __init__.py  response.py
docs/: 01-REQUIREMENTS-SPECIFICATION.md  02-ARCHITECTURE-DESIGN.md  03-FOLDER-STRUCTURE.md  04-FRONTEND-DESIGN.md  05-BACKEND-SERVICES-DESIGN.md  06-NOTIFICATION-SYSTEM-DESIGN.md
frontend/: .env.development  .env.production  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  index.ts
(+53 files in other folders)
